# symbolic-search-runtime

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  README_ko.md  pyproject.toml  syrch.yml  validate_real.py
.github/workflows/: ci.yml  publish.yml
benchmark/evaluator/: errors.py  generate_ground_truth.py  run_benchmark.py  validate_business.py
benchmark/generator/: gen_business_db.py  gen_on_databricks.py
benchmark/generator/backends/: base.py  delta.py  sqlite.py
benchmark/generator/core/: data.py  quality.py  schema.py  seed.py
benchmark/profiles/: databricks-enterprise.yaml  enterprise.yaml  medium.yaml  small.yaml
benchmark/questions/: pilot.json
benchmark/schema/: customer.yaml  marketing.yaml  metadata.yaml  noise.yaml  sales.yaml
benchmarks/: example.jsonl
scripts/: gen_fixtures.py
src/syrch/: __init__.py  api.py
src/syrch/cli/: app.py
src/syrch/core/: config.py  logging.py  models.py
src/syrch/eval/: metrics.py  report.py  runner.py
src/syrch/executors/: base.py  cached_executor.py  databricks_executor.py  jdbc_executor.py  spark_executor.py  sqlite_executor.py
src/syrch/llm/: anthropic_llm.py  base.py  cache.py  openai_llm.py
src/syrch/search/: aggregator.py  calibrator.py  clarify.py  grid.py  pipeline.py  planner.py  retriever.py  rlm_engine.py  scheduler.py
tests/: test_cache.py  test_clarify.py  test_e2e.py  test_eval.py  test_integration.py  test_planner.py  test_rlm_engine.py  test_scheduler.py
tests/fixtures/: orders_10dim.sqlite  wikipedia_clickstream.sqlite
