[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syrch"
version = "0.1.0"
description = "NL -> ProblemSpec -> Search(D&C+RLM) -> SQL Evaluation -> Optimal Solution"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "databricks-sql-connector>=4.0",
    "rich>=13.0",
    "pandas>=2.0",
    "diskcache>=5.6",
    "sqlglot>=25.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "mypy>=1.0", "ruff>=0.3"]

[project.scripts]
syrch = "syrch.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]
