[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syrch"
version = "0.1.0"
description = "NL -> ProblemSpec -> Search(D&C+RLM) -> SQL Evaluation -> Optimal Solution"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["sql", "nlp", "search", "llm", "databricks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [{name = "emeraldgoose", email = "emeraldgoose@gmail.com"}]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "databricks-sql-connector>=4.0",
    "rich>=13.0",
    "pandas>=2.0",
    "diskcache>=5.6",
    "sqlglot>=25.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
databricks = [
    "databricks-sql-connector>=4.0",
    "databricks-sdk>=0.20",
    "azure-identity>=1.15",
]
pyspark = ["pyspark>=3.5"]
all = [
    "databricks-sql-connector>=4.0",
    "databricks-sdk>=0.20",
    "azure-identity>=1.15",
    "pyspark>=3.5",
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.0",
    "ruff>=0.3",
]
dev = ["pytest>=8", "pytest-cov>=5", "mypy>=1.0", "ruff>=0.3"]

[project.scripts]
syrch = "syrch.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]
